# web-aware-rag

./: .env.example  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: dependencies.py  dto.py  router.py  subscriber.py
app/entities/: entity.py
app/repository/: repository.py
app/repository/models/: tables.py
app/service/: ingestion_service.py  retrieval_service.py
cmd_server/server/: main.py
cmd_server/worker/: main.py
pkg/config/: config.py
pkg/embedding/: client.py
pkg/llm/: client.py
pkg/postgres/: client.py
pkg/redis/: client.py
